--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -1,6 +1,6 @@
 .navbar {
   border-top: 4px solid #6db33f;
-  background-color: #34302d;
+  background-color: #87D88A;
   margin-bottom: 0px;
   border-bottom: 0;
   border-left: 0;
