fix: change background color of the table header owners

--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -51,6 +51,11 @@
 @table-border-color:                      @spring-brown;
 
 .table > thead > tr > th {
+  background-color:lighten(@spring-brown, 3%);
+  color: @spring-light-grey;
+}
+
+#ownersTable > thead > tr > th {
   background-color:@spring-light-grey;
   color: @spring-brown;
 }
