Cambios de estilo de la website

--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -13,12 +13,12 @@
  */
 @icon-font-path:    "../../webjars/bootstrap/fonts/";
 
-@spring-green:      #6db33f;
-@spring-dark-green: #5fa134;
+@spring-green:      rgb(128, 64, 0);
+@spring-dark-green: rgb(128, 0, 0);
 @spring-brown:      #34302D;
 @spring-grey:       #838789;
 @spring-light-grey: #f1f1f1;
-@spring-red:        #ff3333;
+@spring-red:        rgb(64, 0, 0);
 
 @body-bg:                           @spring-light-grey;
 @text-color:                        @spring-brown;
