--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -363,11 +363,13 @@ hr {
   display:none;
 }
 #one:checked ~ .panels #one-panel,
-#two:checked ~ .panels #two-panel{
+#two:checked ~ .panels #two-panel,
+#three:checked ~ .panels #three-panel{
   display:block
 }
 #one:checked ~ .tabs #one-tab,
-#two:checked ~ .tabs #two-tab{
+#two:checked ~ .tabs #two-tab,
+#three:checked ~ .tabs #three-tab{
   background:#fffffff6;
   color:#800000;
   border-top: 3px solid #800000;
